--- a/charts/opencloud-microservices/templates/minio/deployment.yaml
+++ b/charts/opencloud-microservices/templates/minio/deployment.yaml
@@ -13,7 +13,8 @@ spec:
         fsGroup: 1000
       initContainers:
         - name: init-minio-bucket
-          image: busybox
+          image: "{{ .Values.minio.image.registry }}/busybox:{{ .Values.minio.image.tag }}"
+          imagePullPolicy: {{.Values.minio.image.pullPolicy | default "IfNotPresent" }}
           securityContext:
             runAsUser: 1000
             runAsGroup: 1000
