--- a/charts/opencloud-microservices/deployments/helm/helmfile.yaml
+++ b/charts/opencloud-microservices/deployments/helm/helmfile.yaml
@@ -33,16 +33,16 @@ releases:
             persistence:
               size: "40Gi"
               accessModes:
-                - ReadWriteMany
-              storageClassName: ceph-cephfs
+                - ReadWriteOnce
+              storageClassName: 
       - onlyoffice:
           enabled: false
           domain: onlyoffice.opencloud.test # Domain for OnlyOffice.
           persistence:
             size: "2Gi"
             accessModes:
-              - ReadWriteMany
-            storageClassName: ceph-cephfs
+              - ReadWriteOnce
+            storageClassName: 
 
       - collabora:
           enabled: true
@@ -125,15 +125,15 @@ releases:
               enabled: true
               size: "10Gi"
               accessModes:
-                - ReadWriteMany
-              storageClassName: ceph-cephfs
+                - ReadWriteOnce
+              storageClassName: 
           search:
             persistence:
               enabled: true
               size: "10Gi"
               accessModes:
-                - ReadWriteMany
-              storageClassName: ceph-cephfs
+                - ReadWriteOnce
+              storageClassName: 
             extractor:
               type: tika
           storagesystem:
@@ -141,15 +141,15 @@ releases:
               enabled: true
               size: "5Gi"
               accessModes:
-                - ReadWriteMany
-              storageClassName: ceph-cephfs
+                - ReadWriteOnce
+              storageClassName: 
           storageusers:
             persistence:
               enabled: true
               size: "60Gi"
               accessModes:
-                - ReadWriteMany
-              storageClassName: ceph-cephfs
+                - ReadWriteOnce
+              storageClassName: 
             storageBackend:
               driver: posix
 
@@ -158,15 +158,15 @@ releases:
               enabled: true
               size: "10Gi"
               accessModes:
-                - ReadWriteMany
-              storageClassName: ceph-cephfs
+                - ReadWriteOnce
+              storageClassName: 
           web:
             persistence:
               enabled: true
               size: "1Gi"
               accessModes:
-                - ReadWriteMany
-              storageClassName: ceph-cephfs
+                - ReadWriteOnce
+              storageClassName: 
             config:
               oidc:
                 webClientID: web
@@ -240,15 +240,15 @@ releases:
               enabled: false
               size: "10Gi"
               accessModes:
-                - ReadWriteMany
-              storageClassName: ceph-cephfs
+                - ReadWriteOnce
+              storageClassName: 
           ocm:
             persistence:
               enabled: false
               size: "1Gi"
               accessModes:
-                - ReadWriteMany
-              storageClassName: ceph-cephfs
+                - ReadWriteOnce
+              storageClassName: 
       - extraResources:
           - |
             apiVersion: v1
