--- a/charts/opencloud-microservices/templates/keycloak/deployment.yaml
+++ b/charts/opencloud-microservices/templates/keycloak/deployment.yaml
@@ -80,23 +80,33 @@ spec:
               subPath: opencloud-realm.json
           resources:
             limits:
-              cpu: 1000m
-              memory: 1Gi
+              cpu: 3000m
+              memory: 5Gi
             requests:
               cpu: 500m
               memory: 512Mi
+          startupProbe:
+            httpGet:
+              path: /health/ready
+              port: http
+            periodSeconds: 10
+            failureThreshold: 30
           readinessProbe:
             httpGet:
-              path: /realms/master
+              path: /health/ready
               port: http
             initialDelaySeconds: 30
+            periodSeconds: 10
             timeoutSeconds: 5
+            failureThreshold: 12
           livenessProbe:
             httpGet:
-              path: /realms/master
+              path: /health/live
               port: http
-            initialDelaySeconds: 60
+            initialDelaySeconds: 90
+            periodSeconds: 10
             timeoutSeconds: 5
+            failureThreshold: 6
       volumes:
         - name: script
           configMap:
