--- a/charts/opencloud-microservices/templates/keycloak/deployment.yaml
+++ b/charts/opencloud-microservices/templates/keycloak/deployment.yaml
@@ -87,13 +87,13 @@ spec:
               memory: 512Mi
           startupProbe:
             httpGet:
-              path: /health/ready
+              path: /realms/master
               port: http
             periodSeconds: 10
             failureThreshold: 30
           readinessProbe:
             httpGet:
-              path: /health/ready
+              path: /realms/master
               port: http
             initialDelaySeconds: 30
             periodSeconds: 10
@@ -101,7 +101,7 @@ spec:
             failureThreshold: 12
           livenessProbe:
             httpGet:
-              path: /health/live
+              path: /realms/master
               port: http
             initialDelaySeconds: 90
             periodSeconds: 10
