--- a/charts/opencloud-microservices/templates/storageusers/deployment.yaml
+++ b/charts/opencloud-microservices/templates/storageusers/deployment.yaml
@@ -75,6 +75,13 @@ spec:
             - name: STORAGE_USERS_DATA_SERVER_URL
               value: "http://{{ .appName }}:9158/data"
 
+            # OC storage driver (posixfs) - set driver to "posix" when opencloud.storage.mode is "posixfs"
+            {{- if eq .Values.opencloud.storage.mode "posixfs" }}
+            - name: STORAGE_USERS_DRIVER
+              value: "posix"
+            {{- else }}
+            {{- end }}
+
             # OC storage driver (decomposed filesystem)
             {{- if  eq .Values.services.storageusers.storageBackend.driver "decomposed" }}
             - name: STORAGE_USERS_DRIVER
