--- a/charts/opencloud-microservices/values.yaml
+++ b/charts/opencloud-microservices/values.yaml
@@ -4547,7 +4547,7 @@ services:
       # -- Configures the storage driver. Possible values are "oc" and "decomposeds3".
       # The OC driver stores all data in the persistent volume if persistence is enabled.
       # The DECOMPOSEDS3 driver stores all metadata in the persistent volume and uploads blobs to s3 if persistence is enabled.
-      driver: decomposed
+      driver: posix
       driverConfig:
         decomposed:
           # @schema
