--- a/charts/opencloud-microservices/templates/storageusers/deployment.yaml
+++ b/charts/opencloud-microservices/templates/storageusers/deployment.yaml
@@ -75,11 +75,10 @@ spec:
             - name: STORAGE_USERS_DATA_SERVER_URL
               value: "http://{{ .appName }}:9158/data"
 
-            # OC storage driver (posixfs) - set driver to "posix" when opencloud.storage.mode is "posixfs"
-            {{- if eq .Values.opencloud.storage.mode "posixfs" }}
+            # OC storage driver (posixfs) - set driver to "posix" when services.storageusers.storageBackend.driver is "posix"
+            {{- if eq .Values.services.storageusers.storageBackend.driver "posix" }}
             - name: STORAGE_USERS_DRIVER
               value: "posix"
-            {{- else }}
             {{- end }}
 
             # OC storage driver (decomposed filesystem)
