--- a/charts/opencloud/templates/minio/pvc.yaml
+++ b/charts/opencloud/templates/minio/pvc.yaml
@@ -1,4 +1,4 @@
-{{- if and .Values.opencloud.storage.s3.internal.persistence.enabled (not .Values.opencloud.storage.s3.internal.persistence.existingClaim) }}
+{{- if and .Values.opencloud.storage.s3.internal.enabled (and .Values.opencloud.storage.s3.internal.persistence.enabled (not .Values.opencloud.storage.s3.internal.persistence.existingClaim)) }}
 apiVersion: v1
 kind: PersistentVolumeClaim
 metadata:
