--- a/charts/opencloud-microservices/deployments/timoni/sa.yaml
+++ b/charts/opencloud-microservices/deployments/timoni/sa.yaml
@@ -65,4 +65,40 @@ roleRef:
   apiGroup: rbac.authorization.k8s.io
   kind:     Role
   name:     flux-full-access
-
+---
+# Service account clamav namespace
+# 1) ServiceAccount — Flux will impersonate this
+apiVersion: v1
+kind: ServiceAccount
+metadata:
+  name: clamav-sa
+  namespace: clamav
+---
+# 2) Role — full power *inside* that namespace
+apiVersion: rbac.authorization.k8s.io/v1
+kind: Role
+metadata:
+  name: clamav-role
+  namespace: clamav
+rules:
+  - apiGroups: [""]
+    resources: ["pods", "services", "configmaps", "secrets"]
+    verbs: ["get", "list", "watch", "create", "update", "patch"]
+  - apiGroups: ["apps"]
+    resources: ["deployments", "daemonsets", "statefulsets"]
+    verbs: ["get", "list", "watch", "create", "update", "patch"]
+---
+# 3) RoleBinding — ties the Role to the SA
+apiVersion: rbac.authorization.k8s.io/v1
+kind: RoleBinding
+metadata:
+  name: clamav-rolebinding
+  namespace: clamav
+subjects:
+  - kind:      ServiceAccount
+    name:      clamav-sa
+    namespace: clamav
+roleRef:
+  apiGroup: rbac.authorization.k8s.io
+  kind:     Role
+  name:     clamav-role
