--- a/charts/opencloud-microservices/deployments/timoni/sa.yaml
+++ b/charts/opencloud-microservices/deployments/timoni/sa.yaml
@@ -71,7 +71,7 @@ roleRef:
 apiVersion: v1
 kind: ServiceAccount
 metadata:
-  name: clamav-sa
+  name: flux
   namespace: clamav
 ---
 # 2) Role — full power *inside* that namespace
@@ -81,12 +81,9 @@ metadata:
   name: clamav-role
   namespace: clamav
 rules:
-  - apiGroups: [""]
-    resources: ["pods", "services", "configmaps", "secrets"]
-    verbs: ["get", "list", "watch", "create", "update", "patch"]
-  - apiGroups: ["apps"]
-    resources: ["deployments", "daemonsets", "statefulsets"]
-    verbs: ["get", "list", "watch", "create", "update", "patch"]
+  - apiGroups:   ["*"]     # core & all groups
+    resources:   ["*"]     # every namespaced resource
+    verbs:       ["*"]     # get, list, create, delete, …
 ---
 # 3) RoleBinding — ties the Role to the SA
 apiVersion: rbac.authorization.k8s.io/v1
@@ -96,7 +93,7 @@ metadata:
   namespace: clamav
 subjects:
   - kind:      ServiceAccount
-    name:      clamav-sa
+    name:      flux
     namespace: clamav
 roleRef:
   apiGroup: rbac.authorization.k8s.io
