Fix oci url and fluxcd config values (#115)
* Fix oci url and fluxcd config values

* Bump up Version

* Bump up Version

* Bump up Version

* fix: correct busybox image reference and fix typos

- Use initContainerImage values for busybox init container instead of minio image registry/tag
- Fix typo: 'Upgrate' -> 'Upgrade' in timoni README
- Fix template spacing for consistency (add space after opening brackets)

Note: initContainerImage is already defined in values.yaml (line 75-88)

Co-authored-by: Michael Stingl <mail@michaelstingl.com>

---------

Co-authored-by: Your Name <you@example.com>
Co-authored-by: Michael Stingl <mail@michaelstingl.com>

--- a/charts/opencloud-microservices/templates/minio/deployment.yaml
+++ b/charts/opencloud-microservices/templates/minio/deployment.yaml
@@ -13,7 +13,8 @@ spec:
         fsGroup: 1000
       initContainers:
         - name: init-minio-bucket
-          image: busybox
+          image: "{{ .Values.initContainerImage.repository }}:{{ .Values.initContainerImage.tag }}"
+          imagePullPolicy: {{ .Values.initContainerImage.pullPolicy | default "IfNotPresent" }}
           securityContext:
             runAsUser: 1000
             runAsGroup: 1000
@@ -25,7 +26,7 @@ spec:
       containers:
         - name: minio
           image: "{{ .Values.minio.image.registry }}/{{ .Values.minio.image.repository }}:{{ .Values.minio.image.tag | default .Values.minio.version }}"
-          imagePullPolicy: {{.Values.minio.image.pullPolicy | default "IfNotPresent" }}
+          imagePullPolicy: {{ .Values.minio.image.pullPolicy | default "IfNotPresent" }}
           args:
             - server
             - --console-address
