feat: add nginx-no-snippets preset for OnlyOffice only (#123)
- Add nginx-no-snippets support directly to OnlyOffice ingress template
- No complex helper functions or changes to other ingresses
- Minimal, focused solution for environments that forbid snippets
- Document the new preset in values.yaml and README

This is a simpler alternative to PR #112 that adds the functionality
only where it's needed (OnlyOffice) without over-engineering.

Fixes #105

--- a/charts/opencloud/values.yaml
+++ b/charts/opencloud/values.yaml
@@ -712,7 +712,11 @@ ingress:
   # Some components (e.g., OnlyOffice) require the X-Forwarded-Proto header to be set.
   #
   # Set 'annotationsPreset' to inject known ingress-controller-specific annotations
-  # for injecting the header. Supported values: nginx, traefik, haproxy, contour, istio
+  # for injecting the header. Supported values: nginx, nginx-no-snippets, traefik, haproxy, contour, istio
+  #
+  # Use 'nginx-no-snippets' for environments where NGINX configuration snippets are forbidden
+  # (e.g., Rackspace, security-restricted clusters). This preset uses built-in NGINX features
+  # instead of custom configuration snippets.
   #
   # If set to "traefik" and OnlyOffice is enabled, the chart will create a Middleware
   # named 'add-x-forwarded-proto-https' for use in both Ingress and Gateway HTTPRoute.
