--- a/charts/opencloud-microservices/deployments/timoni/opencloud/configmap.yaml
+++ b/charts/opencloud-microservices/deployments/timoni/opencloud/configmap.yaml
@@ -16,6 +16,11 @@ data:
   TAG: ""
 
   ###############################################################################
+  # Flux RBAC Configuration
+  ###############################################################################
+  SERVICE_ACCOUNT_ENABLED: "true"
+
+  ###############################################################################
   # Deployment Strategy
   ###############################################################################
   DEPLOY_TYPE: "Recreate"
