--- a/charts/opencloud-microservices/deployments/timoni/openldap/secret.yaml
+++ b/charts/opencloud-microservices/deployments/timoni/openldap/secret.yaml
@@ -3,7 +3,7 @@ apiVersion: v1
 kind: Secret
 metadata:
   name: opencloud-ldap-secrets
-  namespace: opencloud
+  namespace: openldap
 stringData:
   adminPassword: "admin"
   configPassword: "config"
