--- a/charts/opencloud-microservices/deployments/helm/helmfile.yaml
+++ b/charts/opencloud-microservices/deployments/helm/helmfile.yaml
@@ -182,7 +182,7 @@ releases:
                         priority: 50
             additionalInitContainers:
               - name: external-sites
-                image: opencloudeu/web-extensions:external-sites-latest
+                image: opencloudeu/web-extensions:external-sites-1.0.0
                 command:
                   - /bin/sh
                   - -c
@@ -191,7 +191,7 @@ releases:
                   - name: apps
                     mountPath: /apps
               - name: drawio
-                image: opencloudeu/web-extensions:draw-io-latest
+                image: opencloudeu/web-extensions:draw-io-1.0.0
                 command:
                   - /bin/sh
                   - -c
@@ -200,7 +200,7 @@ releases:
                   - name: apps
                     mountPath: /apps
               - name: importer
-                image: opencloudeu/web-extensions:importer-latest
+                image: opencloudeu/web-extensions:importer-1.0.0
                 command:
                   - /bin/sh
                   - -c
@@ -209,7 +209,7 @@ releases:
                   - name: apps
                     mountPath: /apps
               - name: jsonviewer
-                image: opencloudeu/web-extensions:json-viewer-latest
+                image: opencloudeu/web-extensions:json-viewer-1.0.0
                 command:
                   - /bin/sh
                   - -c
@@ -218,7 +218,7 @@ releases:
                   - name: apps
                     mountPath: /apps
               - name: progressbars
-                image: opencloudeu/web-extensions:progress-bars-latest
+                image: opencloudeu/web-extensions:progress-bars-1.0.0
                 command:
                   - /bin/sh
                   - -c
@@ -227,7 +227,7 @@ releases:
                   - name: apps
                     mountPath: /apps
               - name: unzip
-                image: opencloudeu/web-extensions:unzip-latest
+                image: opencloudeu/web-extensions:unzip-1.0.0
                 command:
                   - /bin/sh
                   - -c
