--- a/charts/opencloud-microservices/templates/graph/deployment.yaml
+++ b/charts/opencloud-microservices/templates/graph/deployment.yaml
@@ -55,6 +55,11 @@ spec:
             - name: GRAPH_SPACES_WEBDAV_BASE
               value: "https://{{ .Values.externalDomain }}"
 
+            - name: GRAPH_STORE_NODES
+              value: nats:9233
+            - name: GRAPH_STORE_DATABASE
+              value: graph
+
             - name: GRAPH_IDENTITY_SEARCH_MIN_LENGTH
               value: {{ .Values.features.sharing.users.search.minLengthLimit | quote }}
 
