--- a/charts/opencloud-microservices/deployments/timoni/opencloud/configmap.yaml
+++ b/charts/opencloud-microservices/deployments/timoni/opencloud/configmap.yaml
@@ -69,9 +69,9 @@ data:
   ###############################################################################
   # Quotas
   ###############################################################################
-  QUOTAS_DEFAULT: "300000000000"
-  QUOTAS_USER: "300000000000"
-  QUOTAS_SPACE_ADMIN: "10000000000000"
+  QUOTAS_DEFAULT: "0"
+  QUOTAS_USER: "0"
+  QUOTAS_SPACE_ADMIN: "0"
 
   ###############################################################################
   # Internal Keycloak (for testing only)
